k8s/namespaces/tor/tor-browser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tor-browser
  namespace: tor
  labels:
    app.kubernetes.io/name: tor-browser
    app.kubernetes.io/managed-by: flux
    app.kubernetes.io/egress: wireguard
  annotations:
    goldilocks.fairwinds.com/vpa-resource-policy: >
      { "containerPolicies": [
      { "containerName": "tor-browser",
      "minAllowed": { "cpu": "100m", "memory": "512Mi" },
      "maxAllowed": { "cpu": "2000m", "memory": "2Gi" },
      "controlledValues": "RequestsOnly" } ] }
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tor-browser
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tor-browser
        app.kubernetes.io/managed-by: flux
        app.kubernetes.io/egress: wireguard
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 10.96.0.11
        searches:
          - tor.svc.cluster.local
          - svc.cluster.local
          - cluster.local
        options:
          - name: ndots
            value: "5"
      automountServiceAccountToken: false
      containers:
        - name: tor-browser
          # renovate: datasource=docker depName=domistyle/tor-browser
          image: docker.io/domistyle/tor-browser:15.0.13@sha256:0dd03f518271f17e19e3c186a6a52f55e316ea189d8d001bb7820ad33fa300e9
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5800
              protocol: TCP
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
              ephemeral-storage: "5Gi"
          livenessProbe:
            tcpSocket:
              port: 5800
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 5800
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          securityContext:
            readOnlyRootFilesystem: false
