k8s/namespaces/tor/tor-browser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tor-browser
  namespace: tor
  labels:
    app.kubernetes.io/name: tor-browser
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: tor-browser
  ports:
    - port: 6901
      targetPort: 6901
      protocol: TCP
      name: https
      appProtocol: https
  type: ClusterIP
