k8s/namespaces/tor/tor-browser/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tor-browser
  namespace: tor
  labels:
    app.kubernetes.io/name: tor-browser
    app.kubernetes.io/managed-by: flux
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - "tor.hosted.fail"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: tinyauth-forward
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: internal-whitelist
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: websocket-support
      backendRefs:
        - name: tor-browser
          port: 5800
