k8s/namespaces/tor/tor-browser/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tor-browser
  namespace: tor
  labels:
    app.kubernetes.io/name: tor-browser
    app.kubernetes.io/managed-by: flux
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tor-browser
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress
      ports:
        - port: 6901
          protocol: TCP
  egress:
    - {}
